--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "repository": "git@github.com:dnstld/react-aircnc-backend.git",
   "author": "Denis Toledo <contato@denistoledo.com.br>",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/server.js"
+  },
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
